tests/ivg/invalid/pattern_unknown_reference.ivg
format IVG-3
// fill references non-existent pattern
fill pattern:missing
rect 0 0 1 1
